# AutoClashBot-rs

./: README.md
acb-core/: Cargo.toml  config.json  test.py
acb-core/src/: auto_clash_bot.rs  config.rs  instance.rs  main.rs  server.rs
acb-core/src/adb/: adb_client.rs  adb_device.rs  command.rs  error.rs  mod.rs
acb-core/src/android/: android.rs  bluestacks.rs  minitouch.rs  mod.rs  virtual_device.rs
acb-core/src/cv/: mod.rs  rect.rs  yolo_detector.rs
acb-core/src/cv/yolov8-rs/: Cargo.toml
acb-core/src/cv/yolov8-rs/src/: lib.rs  model.rs
acb-core/src/village/: mod.rs  village_handler.rs
