[package]
name = "acb-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1", features = ["full"] }
futures = "0.3.29"
async-event-emitter = "0.1.2"
lazy_static = "1.4.0"