[package]
name = "acb-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
async-event-emitter = "0.1.2"
lazy_static = "1.4.0"
regex = "1.10.2"
byteorder = "1.5.0"
yolov8-rs = { path = "src/cv/yolov8-rs"}
image = { version = "0.24.7", default-features = false, features = ["jpeg", "png", "webp-encoder"] }